Deocamdata am reusit implementarea actiunilor ce sunt pana in testul 5 si se vede clar ca folosesc cam multe concepte anti-oop, dar prima oara incerc sa o termin asa si apoi sa incerc sa elimin catd e mult pot(din static)